# wg-easy

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  .markdownlint.json  .mergify.yml  .prettierrc.json  191.patch  AMNEZIAWG_BUILD.md  AWG_UI_IMPLEMENTATION.md  Alpine.Wireguard.Dockerfile  Application.Deploy.Dockerfile  Application.Runtime.Dockerfile  Builder.Dockerfile  Builder.Former.dockerfile  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-dev  Dockerfile.dev  Generate.bcrypt.hash.md  How_to_generate_an_bcrypt_hash.md  Installer.Dockerfile  LICENSE  LICENSE.md  README.md  README_zh_ch.md  SECURITY.md  awg-easy.service  build-wg-easy.sh  build_install.sh  build_release.sh  buildall.sh  changelog.json  contributing.md  docker-compose.beta.yml  docker-compose.deploy.yml  docker-compose.dev-secrets.yml  docker-compose.dev.yml  (+26 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.wg-easy/: wg0.conf  wg0.json
Pre-release/: 404.html  index.html  search.json  sitemap.xml
assets/: awg-easy.sketch  wg-easy.sketch
backend/: .eslintrc.json  package-lock.json  package.json  server.js
config/: wg0.conf  wg0.json
config_/: privatekey  publickey  wg0 copy.conf  wg0.conf
coredns/: Corefile
data/: wg0.conf  wg0.json
development/: 404.html  index.html  search.json  sitemap.xml
docs/: changelog.json  duck.sh  mkdocs.yml  requirements.txt  zensical.toml
edge/: 404.html  index.html  sitemap.xml
nix/: module.nix  (+1 more)
wg-password/: .gitignore  Cargo.toml  PASSWORD.md  index.mjs  package.json  wgpw.sh
wg-password/src/: main.rs
(+1131 files in other folders)
