[package]
name = "rs-wg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-files = "0"
actix-web-lab = "0"
actix-session = { version = "0", features = ["cookie-session"] }
futures-util = { version = "0", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "1", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
chrono = {version = "0", features = ["serde"] }
qrcode-generator = "4"
fs2 = "0"