[package]
name = "wg-password"
version = "0.1.1"
authors = ["tetuaoro <65575727+tetuaoro@users.noreply.github.com>"]
description = "A binary to create bcrypt password hashes for wg-easy, enhancing security."
edition = "2021"

[dependencies]
bcrypt = "0.15.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "wgpw"
path = "src/main.rs"
